<resources>
    <string name="app_name">VTSBD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="_207340342">207340342</string>
    <string name="ingrese_nombre">Ingrese nombre</string>
    <string name="ingrese_cedula">Ingrese cedula</string>
    <string name="ingrese_profesion">Ingrese profesion</string>
    <string name="registrar">REGISTRAR</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registar_usuario">Registar Usuario</string>
    <string name="ir_a_menu">Ir a menu</string>
    <string name="consultar_usuario">Consultar Usuario</string>
    <string name="ingrese_su_cedula">Ingrese su cedula</string>
    <string name="consultar">CONSULTAR</string>
    <string name="jose_ocampo">Jose Ocampo</string>
    <string name="vtsmsph">vtsmsph.com</string>
    <string name="moiso_se_la_come">Moiso se la come</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="consultar_usuario2">Consultar usuario</string>
    <string name="tituloregistrousuario">tituloRegistrousuario</string>
    <string name="agregar_usuario">Agregar Usuario</string>
    <string name="say_hello">Say Hello</string>
    <string name="activar_gps">Activar GPS</string>
    <string name="ninguna_direccion">-- ninguna direccion --</string>
    <string name="no_coordenadas">-- no coordenadas --</string>
</resources>
