<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:onClick="verMenu"
        android:text="@string/ir_a_menu"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btnActivarUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@color/colorAccent"
        android:text="@string/activar_gps" />

    <TextView
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_margin="18dp"
        android:gravity="center"
        android:text="@string/ninguna_direccion" />

    <TextView
        android:id="@+id/txtCoordenadas"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_margin="18dp"
        android:gravity="center"
        android:text="@string/no_coordenadas" />
</LinearLayout>