<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentConsultarUnUsuario">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/consultar_usuario"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_su_cedula"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/vistaNombre"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/vistaProfesion"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/consultar"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />




</LinearLayout>